# picscaption

./: README.md  biome.json  docker-compose.yml  mise.toml
.cursor/rules/: biome.mdc  bun.mdc  convex.mdc  docs.mdc  find.mdc  forEach.mdc  loc500.mdc  never-start-server.mdc  on-mouse-down.mdc  react.mdc  ruff.mdc
ai3/: .gitignore  Dockerfile  README.md  main.py  mise.toml  pyproject.toml
ai3/routes/: __init__.py  caption.py  generate.py  health.py  upscale.py
ai3/services/: __init__.py  capabilities.py  captioner.py  generator.py  queue.py  upscaler.py
app/: .gitignore  README.md  astro.config.mjs  biome.json  package.json  tsconfig.json
app/convex/: images.ts  metaObjects.ts  schema.ts  userSettings.ts  users.ts
app/convex/_generated/: api.d.ts
app/src/: global.d.ts  types.ts
app/src/components/: App.tsx  AppWrapper.tsx  BulkCaptionsDrawer.tsx  BulkEditDrawer.tsx  BulkEditModal.tsx  BulkTagsDrawer.tsx  BulkUpscaleDrawer.tsx  BulkUpscaleModal.tsx  CaptionForm.tsx  CaptionsTab.tsx  ConvexClientProvider.tsx  DeleteAllDataModal.tsx  DeleteMetaObjectModal.tsx  EmptyState.tsx  Filmstrip.tsx  GenerateModal.tsx  Header.tsx  ImageActionBar.tsx  ImagePreview.tsx  ImportDrawer.tsx  ImportModal.tsx  KeybindingsDrawer.tsx  KeybindingsModal.tsx  ResizeHandle.tsx  RestoreHistoryModal.tsx  SettingsDrawer.tsx  SettingsModal.tsx  TagInput.tsx  Toggle.tsx  UndoToast.tsx  index.ts
app/src/hooks/: index.ts  useAutoSave.ts  (+14 more)
docs/: GPUs.md  LAUNCHPLAN.md  MARKETING.md
old-react-frontend/: TODO.md  index.html  package.json
old-react-frontend/src/: App.tsx  main.tsx
(+36 files in other folders)
